--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                     165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
-                                    <image class="home__blob-img" x="5" y="1" href="assets/img/DSC_0986-removebg.png"/>
+                                    <image class="home__blob-img" x="5" y="1" href="assets/img/perfil.png"/>
                                 </g>
                             </svg>
                         </div>
@@ -155,7 +155,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a download="" href="assets/pdf/Aditya Sood.pdf" class="button button--flex">
+                            <a download="" href="assets/pdf/Alexa-Cv.pdf" class="button button--flex">
                                 Download CV<i class="uil uil-import button__icon"></i>
                             </a>
                         </div>
@@ -829,7 +829,7 @@
 
                             <div>
                                 <h3 class="contact__title">Phone</h3>
-                                <span class="contact__subtitle">+91 83600-38458</span>
+                                <span class="contact__subtitle">+91 83600-38xxx</span>
                             </div>
                         </div>
 
@@ -838,7 +838,7 @@
 
                             <div>
                                 <h3 class="contact__title">Email</h3>
-                                <span class="contact__subtitle">aditya12sc@gmail.com</span>
+                                <span class="contact__subtitle">axxxxxxxsc@gmail.com</span>
                             </div>
                         </div>
 
@@ -847,7 +847,7 @@
 
                             <div>
                                 <h3 class="contact__title">Location</h3>
-                                <span class="contact__subtitle">H.No. 2415/4, Block-24 <br> Housefed Complex, Banur <br> Distt. Patiala, Punjab - 140601</span>
+                                <span class="contact__subtitle">H.No. 2xxx/4, Block-xx <br> Houxxxed Cxxxlex, Bxxxxr <br> Distt. Pxxxxxx, Puxxxxb - 14xxx1</span>
                             </div>
                         </div>
                     </div>
@@ -885,7 +885,7 @@
          <div class="footer__bg">
             <div class="footer__container container grid">
                 <div>
-                    <h1 class="footer__title">Aditya</h1>
+                    <h1 class="footer__title">Axxxxx</h1>
                     <span class="footer__subtitle">Data Analyst/Frontend Developer</span>
                 </div>
 
