--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">Aditya</a>
+                <a href="#" class="nav__logo">Alexa</a>
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
                         <li class="nav__item">
@@ -106,7 +106,7 @@
                         </div>
 
                         <div class="home__data">
-                            <h1 class="home__title">Hi, I'm Aditya</h1>
+                            <h1 class="home__title">Hi, I'm Alexa</h1>
                             <h3 class="home_subtitle">Frontend Developer/Data Analyst</h3>
                             <p class="home__description">Intermediate level experience in web design and development knowledge, producing high quality work.
                                 Aspiring to be a Data Analyst and work with Big Data.</p>
@@ -914,7 +914,7 @@
                 </div>
             </div>
 
-            <p class="footer__copy">&#169;Aditya *All rights reserved*</p>
+            <p class="footer__copy">&#169;Axxxxx *All rights reserved*</p>
          </div>
         </footer>
         
